db: use local socket auth for Alembic (no password); update local dev docs

--- a/db/alembic.ini
+++ b/db/alembic.ini
@@ -2,4 +2,4 @@
 script_location = db/migrations
 
 [alembic:runtime]
-sqlalchemy.url = postgresql+psycopg2://postgres:postgres@localhost:5432/planet
+sqlalchemy.url = postgresql+psycopg2:///planet
