dev: switch local dev to Docker Compose; update alembic DSN; compose healthcheck

--- a/db/alembic.ini
+++ b/db/alembic.ini
@@ -1,4 +1,4 @@
 [alembic]
 script_location = db/migrations
-sqlalchemy.url = postgresql+psycopg2:///planet
+sqlalchemy.url = postgresql+psycopg2://postgres:postgres@localhost:5432/planet
 
