--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - POSTGRES_DB=planet
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d planet"]
+      interval: 2s
+      timeout: 5s
+      retries: 10
     volumes:
       - pgdata:/var/lib/postgresql/data
   nats:
