--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+.ruff_cache
 
 # Virtual Environments
 venv/
@@ -45,6 +46,7 @@ venv.bak/
 *.swo
 *~
 .DS_Store
+.claude/
 
 # Jupyter Notebook
 # ================
