--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   // Python settings
   "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-
   // Ruff formatter and linter
   "[python]": {
     "editor.defaultFormatter": "charliermarsh.ruff",
@@ -11,21 +10,22 @@
       "source.organizeImports": "explicit"
     }
   },
-
   // Ruff extension settings
   "ruff.enable": true,
   "ruff.organizeImports": true,
   "ruff.fixAll": true,
-
   // Disable other Python formatters/linters to avoid conflicts
   "python.linting.enabled": false,
   "python.formatting.provider": "none",
-
   // File associations
   "files.associations": {
     "*.toml": "toml"
   },
-
   // Auto-save
-  "files.autoSave": "onFocusChange"
+  "files.autoSave": "onFocusChange",
+  "python.testing.pytestArgs": [
+    "apps"
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
