--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,7 @@
 {
   "name": "web",
+  "type": "module",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development next dev",
