--- a/apps/globe/package.json
+++ b/apps/globe/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev --port 3001",
     "build": "next build",
+    "build:a": "ANALYZE=true next build",
     "start": "next start --port 3001",
     "postinstall": "symlink-dir node_modules/cesium/Build/Cesium public/cesium"
   },
@@ -18,6 +19,7 @@
     "resium": "1.19.0-beta.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.5.5",
     "@types/bun": "latest",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
