wip: local vs docker db boilerplate code added but docker not tested

--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -1,3 +1,8 @@
-DATABASE_URL=postgresql+psycopg2://kemal@/planet?host=/tmp
+# Database connection
+# Docker Postgres (recommended - shared across repos)
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/planet
+
+# Local Postgres (alternative - uncomment to use)
+# DATABASE_URL=postgresql+psycopg2://kemal@/planet?host=/tmp
 POLL_INTERVAL=5
 GPU_SIMULATION=true
