--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,8 @@
 # Database connection
+# Docker Postgres (recommended - shared across repos)
+# DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/planet
+
+# Local Postgres (alternative - uncomment to use)
 DATABASE_URL=postgresql+psycopg2://kemal@/planet?host=/tmp
 
 # API settings
