--- a/db/alembic.ini
+++ b/db/alembic.ini
@@ -1,4 +1,5 @@
 [alembic]
 script_location = db/migrations
-sqlalchemy.url = postgresql+psycopg2://kemal@/planet?host=/tmp
+# Docker deployment (default) - accessible across repos
+sqlalchemy.url = postgresql+psycopg2://postgres:postgres@localhost:5432/planet
 
