--- a/apps/api/docker-compose.test.yml
+++ b/apps/api/docker-compose.test.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   test-db:
     image: postgres:16-alpine
@@ -9,9 +7,9 @@ services:
       POSTGRES_PASSWORD: test
       POSTGRES_DB: test_db
     ports:
-      - "5433:5432"
+      - '5433:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U test"]
+      test: ['CMD-SHELL', 'pg_isready -U test']
       interval: 5s
       timeout: 5s
       retries: 5
