fix: api can now also use docker

--- a/db/.env.example
+++ b/db/.env.example
@@ -1,13 +1,13 @@
 # Docker Postgres (default)
-# POSTGRES_USER=postgres
-# POSTGRES_PASSWORD=postgres
-# POSTGRES_DB=planet
-# POSTGRES_HOST=localhost
-# POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=planet
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 
 # Local Postgres (alternative)
-POSTGRES_USER=kemal
-POSTGRES_PASSWORD=
-POSTGRES_DB=planet
-POSTGRES_HOST=/tmp
-POSTGRES_PORT=5432
+# POSTGRES_USER=kemal
+# POSTGRES_PASSWORD=
+# POSTGRES_DB=planet
+# POSTGRES_HOST=/tmp
+# POSTGRES_PORT=5432
