--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   # Development Postgres - shared across all repos (api, worker, etc)
   postgres:
@@ -10,9 +8,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=planet
     ports:
-      - "5432:5432"
+      - '5432:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d planet"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d planet']
       interval: 2s
       timeout: 5s
       retries: 10
@@ -26,8 +24,8 @@ services:
     image: nats:2
     container_name: planet-dev-nats
     ports:
-      - "4222:4222"
-      - "8222:8222"
+      - '4222:4222'
+      - '8222:8222'
     networks:
       - planet-dev
 
