feat: reorganised the repo to have .env files in root and for projects they can be overriden

--- a/db/alembic.ini
+++ b/db/alembic.ini
@@ -1,5 +1,8 @@
 [alembic]
 script_location = db/migrations
-# Docker deployment (default) - accessible across repos
-sqlalchemy.url = postgresql+psycopg2://postgres:postgres@localhost:5432/planet
+# Database URL from environment variable
+sqlalchemy.url = %(DATABASE_URL)s
+
+# Use date-based naming for migration files
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d%%(second).2d_%%(slug)s
 
