--- a/k8s/api/staging-deployment.yaml
+++ b/k8s/api/staging-deployment.yaml
@@ -31,6 +31,11 @@ spec:
             secretKeyRef:
               name: api-secrets
               key: database-url
+        - name: CORS_ORIGINS
+          valueFrom:
+            secretKeyRef:
+              name: api-secrets
+              key: cors-origins              
         - name: HOST
           value: "0.0.0.0"
         - name: PORT
