fix: code changes for web deployent

--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ GPU_SIMULATION=true
 # Globe (Frontend) Configuration
 # =============================================================================
 # NEXT_PUBLIC_CESIUM_TOKEN=your-cesium-token-here
-# NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # =============================================================================
 # App-Specific Overrides
