--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -25,22 +25,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: apps/web/package-lock.json
+          bun-version: latest
 
       - name: Install dependencies
         working-directory: apps/web
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Run unit tests
         working-directory: apps/web
         env:
           NEXT_PUBLIC_API_URL: http://localhost:8000
-        run: npm run test:coverage
+        run: bun run test:coverage
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v5
@@ -83,22 +81,20 @@ jobs:
           API_URL=$(gcloud secrets versions access latest --secret="api-url-staging" --project=${{ env.PROJECT_ID }})
           echo "api_url=$API_URL" >> $GITHUB_OUTPUT
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: apps/web/package-lock.json
+          bun-version: latest
 
       - name: Install dependencies
         working-directory: apps/web
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Build static export for staging
         working-directory: apps/web
         env:
           NEXT_PUBLIC_API_URL: ${{ steps.staging-secrets.outputs.api_url }}
-        run: npm run build
+        run: bun run build
 
       - name: Upload staging build artifact
         uses: actions/upload-artifact@v4
@@ -131,22 +127,20 @@ jobs:
           API_URL=$(gcloud secrets versions access latest --secret="api-url-production" --project=${{ env.PROJECT_ID }})
           echo "api_url=$API_URL" >> $GITHUB_OUTPUT
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: apps/web/package-lock.json
+          bun-version: latest
 
       - name: Install dependencies
         working-directory: apps/web
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Build static export for production
         working-directory: apps/web
         env:
           NEXT_PUBLIC_API_URL: ${{ steps.production-secrets.outputs.api_url }}
-        run: npm run build
+        run: bun run build
 
       - name: Upload production build artifact
         uses: actions/upload-artifact@v4
