--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,9 +21,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@tanstack/react-query": "^5.90.3",
-    "@tanstack/react-router": "^1.132.47",
-    "next": "^15.5.5",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-router": "^1.133.21",
+    "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
@@ -31,18 +31,19 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@playwright/test": "^1.56.0",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bun": "latest",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "@vitest/ui": "^3.2.4",
-    "jsdom": "^27.0.0",
-    "typescript": "^5",
+    "jsdom": "25.0.1",
+    "parse5": "7.2.1",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
 }
