--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -79,6 +79,7 @@ jobs:
         with:
           file: ./apps/api/coverage.xml
           flags: api
+          name: api-coverage
           fail_ci_if_error: false
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
