--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -67,6 +67,7 @@ jobs:
         with:
           files: ./apps/web/coverage/coverage-final.json
           flags: web
+          name: web-coverage
           fail_ci_if_error: false
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
