fixL workflow allow dispatch

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -15,6 +15,7 @@ on:
     workflows: ["Deploy API"]
     types:
       - completed
+  workflow_dispatch:  # Add this to enable manual triggers
 
 env:
   PROJECT_ID: overflying-web
