--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev",
     "build": "next build",
+    "build:a": "NODE_ENV=production ANALYZE=true next build --webpack",
     "start": "next start",
     "test": "vitest",
     "test:watch": "vitest --watch",
@@ -22,15 +23,14 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@tanstack/react-query": "^5.90.5",
-    "@tanstack/react-router": "^1.133.21",
-    "next": "^15.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@tanstack/react-router": "^1.133.22",
+    "next": "^16.0.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.0",
     "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -44,6 +44,8 @@
     "@vitest/ui": "^3.2.4",
     "jsdom": "25.0.1",
     "parse5": "7.2.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
