--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development next dev",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "build:a": "NODE_ENV=production ANALYZE=true next build --webpack",
     "start": "next start",
     "test": "vitest",
@@ -22,8 +22,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@splinetool/react-spline": "^4.1.0",
     "@tanstack/react-query": "^5.90.5",
-    "@tanstack/react-router": "^1.133.22",
     "next": "^16.0.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
