--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "nats-py>=2.9.0",
 ]
 
 [project.optional-dependencies]
