--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -10,8 +10,16 @@ dependencies = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "psutil>=5.9.0",
+    "nats-py>=2.9.0",
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+name = "constellation-worker"
+version = "0.1.0"
+description = "GPU job worker for Constellation"
+authors = ["Your Name <your.email@example.com>"]
+packages = [{include = "src"}]
