--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,8 @@
     "build": "NODE_ENV=production next build",
     "build:a": "NODE_ENV=production ANALYZE=true next build --webpack",
     "start": "next start",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
@@ -41,9 +43,12 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "eslint-config-planet": "^23.2.0",
     "jsdom": "25.0.1",
     "parse5": "7.2.1",
     "react": "^19.2.0",
