--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint-config-planet": "^23.2.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "jsdom": "25.0.1",
     "parse5": "7.2.1",
     "react": "^19.2.0",
